<?xml version="1.0"?>
<package format="2">
  <name>rqt_graph_plus_ros1</name>
  <version>1.0.0</version>
  <description>Enhanced ROS graph viewer for ROS1 (Noetic).</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>rosgraph</depend>
  <depend>rosnode</depend>
  <depend>python_qt_binding</depend>
  <depend>qt_gui</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
