<?xml version="1.0"?>
<package format="3">
  <name>rqt_graph_plus_ros2</name>
  <version>1.0.0</version>
  <description>Enhanced ROS graph viewer for ROS2.</description>

  <maintainer email="user@todo.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>